--- a/app/src/main/res/drawable/round_btn.xml
+++ b/app/src/main/res/drawable/round_btn.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="oval">
-            <solid android:color="#8BC34A"/>
+            <solid android:color="#94DB46"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="#4CAF50"/>
+            <solid android:color="#317236"/>
         </shape>
     </item>
 </selector>
