--- a/app/src/main/res/layout/fragment_symptom.xml
+++ b/app/src/main/res/layout/fragment_symptom.xml
@@ -9,35 +9,69 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Enter Symptoms:"
-        android:textSize="30sp"
+        android:layout_weight=".3"
+        android:gravity="center_vertical"
+        android:text="Log your symptoms:"
+        android:fontFamily="@font/bariol_regular_italic"
+        android:textSize="25sp"
+        android:layout_marginLeft="45dp"
         android:textStyle="bold" />
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:gravity="center_horizontal">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="40dp">
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:text="Itchy" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginRight="40dp">
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:text="Bumpy" />
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:background="@drawable/itchy" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Itchy"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="15dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:background="@drawable/bumpy" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:text="Bumpy"
+                    android:textSize="15dp" />
+            </LinearLayout>
+
         </TableRow>
 
         <TableRow
@@ -45,17 +79,49 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal">
 
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:text="Redness" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:text="Scaly" />
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:background="@drawable/redness" />
+
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Redness"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="15dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/button4"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:background="@drawable/scaly" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Scaly"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="15dp"/>
+
+            </LinearLayout>
+
         </TableRow>
 
 
