Master list toggle fragment and unverified fragment added. Added Scrollview + Cardview test for master list. Master list toggle buttons configured.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Theme for the master toggle switch -->
+    <!--<style name="SwitchStyle" >-->
+        <!--<item name="android:thumb">@drawable/switch_thumb</item>-->
+        <!--<item name="trackTint">@color/switch_color</item>-->
+    <!--</style>-->
+
 </resources>
