--- a/app/src/main/res/layout/fragment_symptom.xml
+++ b/app/src/main/res/layout/fragment_symptom.xml
@@ -28,14 +28,14 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="40dp">
+            android:layout_marginBottom="40dp"
+            android:gravity="center_horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginRight="40dp">
+                android:layout_marginRight="40dp"
+                android:orientation="vertical">
 
                 <Button
                     android:id="@+id/button"
@@ -46,10 +46,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Itchy"
-                    android:layout_marginTop="10dp"
                     android:layout_gravity="center"
-                    android:textSize="15dp"/>
+                    android:layout_marginTop="10dp"
+                    android:text="Itchy"
+                    android:textSize="15dp" />
             </LinearLayout>
 
             <LinearLayout
