Added a Recycler View Adapter for the Food Dialog. Makes it easier to handle adding/deleting/reading the edit texts. Recycler View translate animation fixed (caveat: - + button sticks to bottom).

--- a/app/src/main/res/layout/recycler_item_food_dialog.xml
+++ b/app/src/main/res/layout/recycler_item_food_dialog.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edit_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -17,7 +17,7 @@
         android:hint="Enter a food"/>
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/edit_close_btn"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="start"
