--- a/app/src/main/res/layout/dialog_food.xml
+++ b/app/src/main/res/layout/dialog_food.xml
@@ -40,31 +40,27 @@
 
                 <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:fillViewport="true">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical" >
+                        android:orientation="vertical">
 
 
-                        <LinearLayout
+                        <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/food_item_lyt"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-<!--                            <include layout="@layout/input_item_food_dialog" />-->
-
-                        </LinearLayout>
+                            android:layout_height="0dp"
+                            android:layout_weight="1"/>
 
                         <Button
                             android:id="@+id/add_btn"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
-                            android:background="@drawable/add_small"
-                            android:gravity="center" />
+                            android:background="@drawable/add_small" />
                     </LinearLayout>
                 </ScrollView>
 
