--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,29 +57,28 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+
+        <ImageButton
             android:id="@+id/home_btn"
-            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Home" />
+            app:srcCompat="@drawable/home_btn" />
 
-        <Button
+        <ImageButton
             android:id="@+id/master_lst_btn"
-            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Master List" />
+            app:srcCompat="@drawable/masterlist_btn" />
 
-        <Button
+        <ImageButton
             android:id="@+id/insight_btn"
-            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Insight" />
+            app:srcCompat="@drawable/insights_btn" />
+
 
     </LinearLayout>
 
