Rough Pop-up xml finished just so that you can play with connecting the buttons. will fix layout/details eventually.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,11 @@
 
     <!--  Mina's Design Colors -->
     <color name="lightGreen">#EFF8EA</color>
-    <color name="green">#56B729</color>
+    <color name="green">#4EA626</color>
     <color name="lightOrange">#FEF3E9</color>
-    <color name="orange">#F28123</color>
-    <color name="lightGray">#E1E1E1</color>
-    <color name="MedLightGray">#C4C4C4</color>
-    <color name="MedDarkGray">#8D8D8D</color>
-    <color name="darkGray">#60695C</color>
+    <color name="medOrange">#F27F21</color>
+    <color name="orange">#EC720E</color>
+    <color name="lightGray">#B3B3B3</color>
+    <color name="medDarkGray">#737373</color>
+    <color name="darkGray">#4A4A4A</color>
 </resources>
