--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="#FFFFFF"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -20,7 +20,14 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="start"
-            android:text="X" />
+            android:background="@drawable/exit" />
+
+        <Button
+            android:id="@+id/next_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="end"
+            android:background="@drawable/next" />
 
         <TextView
             android:id="@+id/toolbar_title"
@@ -28,14 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Toolbar Title" />
-
-        <Button
-            android:id="@+id/next_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="end"
-            android:text=">" />
+            android:text="Elimin8"
+            android:fontFamily="@font/bariol_bold"
+            android:textColor="@color/orange"/>
 
     </androidx.appcompat.widget.Toolbar>
 
