--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,8 +19,10 @@
             android:layout_height="200dp"
             android:layout_centerInParent="true"
             android:background="@drawable/round_btn"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/bariol_bold_italic"
             android:text="Enter\nToday's\nData"
-            android:textSize="24sp" />
+            android:textSize="30sp" />
 
     </RelativeLayout>
 
@@ -29,19 +32,30 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".1"
+        android:paddingLeft="30dp"
+        android:fontFamily="@font/bariol_regular"
         android:text="Your Weekly Overview"
-        android:textSize="20sp"/>
+        android:textSize="25sp"/>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:lineSpacingExtra="30sp"
-        android:text="8/5 Meal Description: Lorem Ispum\n8/7 Meal Description: Lorem Ispum\n8/9 Meal Description: Lorem Ispum\n"
-        android:textSize="24sp" />
+    <ScrollView
+        android:layout_width="411dp"
+        android:layout_height="77dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
