--- a/app/src/main/res/layout/fragment_master_toggle.xml
+++ b/app/src/main/res/layout/fragment_master_toggle.xml
@@ -19,7 +19,9 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:text="Unverified" />
+        android:text="Unverified"
+        android:fontFamily="@font/bariol_bold"
+        />
 
     <Space
         android:layout_width="0dp"
@@ -31,7 +33,8 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_weight="1"
-        android:text="Verified" />
+        android:text="Verified"
+        android:fontFamily="@font/bariol_bold"/>
 
     <Space
         android:layout_width="0dp"
