--- a/app/src/main/res/layout/recycler_item_food.xml
+++ b/app/src/main/res/layout/recycler_item_food.xml
@@ -43,7 +43,7 @@
                     android:id="@+id/button6"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:background="@drawable/back" />
+                    android:background="@drawable/editsm" />
 
                 <Space
                     android:layout_width="10dp"
@@ -53,7 +53,7 @@
                     android:id="@+id/button7"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:background="@drawable/exit" />
+                    android:background="@drawable/deletesm" />
 
                 <Space
                     android:layout_width="10dp"
