--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="lightGray">#B3B3B3</color>
     <color name="medDarkGray">#737373</color>
     <color name="darkGray">#4A4A4A</color>
+    <color name="white">#FFFFFF</color>
 </resources>
