--- a/app/src/main/res/layout/recycler_item_food.xml
+++ b/app/src/main/res/layout/recycler_item_food.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/white"
+                android:padding="10dp"
                 android:orientation="horizontal">
 
                 <TextView
