--- a/app/src/main/res/layout/recycler_item_unverified.xml
+++ b/app/src/main/res/layout/recycler_item_unverified.xml
@@ -18,8 +18,10 @@
             android:id="@+id/month_lbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="June"
-            android:textSize="24sp"
+            android:text="JUNE"
+            android:fontFamily="@font/bariol_regular"
+            android:textSize="15sp"
+            android:paddingTop="10dp"
             app:layout_constraintEnd_toEndOf="@+id/recycle_item_img"
             app:layout_constraintStart_toStartOf="@+id/recycle_item_img"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +30,8 @@
             android:id="@+id/date_lbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="19"
+            android:text="26"
+            android:fontFamily="@font/bariol_regular"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="@+id/recycle_item_img"
             app:layout_constraintStart_toStartOf="@+id/recycle_item_img"
@@ -36,8 +39,9 @@
 
         <ImageView
             android:id="@+id/recycle_item_img"
-            android:layout_width="50dp"
+            android:layout_width="36dp"
             android:layout_height="50dp"
+            android:paddingTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/date_lbl"
             app:srcCompat="@drawable/scaly" />
@@ -45,7 +49,8 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp">
 
         <TableRow
             android:id="@+id/recycle_item_row1"
@@ -58,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="10"
+                android:fontFamily="@font/bariol_regular"
                 android:text="Food Name" />
 
             <TextView
@@ -86,6 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="10"
+                android:fontFamily="@font/bariol_regular"
                 android:text="Food Name" />
 
             <TextView
@@ -114,6 +121,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="10"
+                android:fontFamily="@font/bariol_regular"
                 android:text="Food Name" />
 
             <TextView
@@ -142,6 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="10"
+                android:fontFamily="@font/bariol_regular"
                 android:text="Food Name" />
 
             <TextView
