--- a/app/src/main/res/layout/popup_deletemeal.xml
+++ b/app/src/main/res/layout/popup_deletemeal.xml
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Delete"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             android:background="@drawable/ok_btn" />
 
     </LinearLayout>
