--- a/app/src/main/res/layout/fragment_master_list.xml
+++ b/app/src/main/res/layout/fragment_master_list.xml
@@ -55,7 +55,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="20dp"
                         android:background="@drawable/ok_btn"
-                        android:textColor="@color/white"
+                        android:textColor="@android:color/white"
                         android:text="Remove from Master List" />
                 </LinearLayout>
 
