--- a/app/src/main/res/layout/popup_importantnote.xml
+++ b/app/src/main/res/layout/popup_importantnote.xml
@@ -48,6 +48,6 @@
         android:layout_margin="15dp"
         android:background="@drawable/ok_btn"
         android:text="Ok"
-        android:textColor="@color/white" />
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
